--- a/app/build.gradle
+++ b/app/build.gradle
@@ -129,6 +129,8 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-invites:17.0.0'
     implementation 'androidx.ads:ads-identifier:1.0.0-alpha04'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
     annotationProcessor 'com.google.cloud:google-cloud-translate:1.95.0'
     implementation 'com.github.f0ris.sweetalert:library:1.6.2'
     implementation 'com.github.thyrlian:AwesomeValidation:v4.2'
